[gd_scene load_steps=10 format=3 uid="uid://dg7qy1digqf2u"]

[ext_resource type="Texture2D" uid="uid://b7rsj0278yqgo" path="res://scenes/game_object/wizard_enemy/wizard_enemy.png" id="1_cab44"]
[ext_resource type="PackedScene" uid="uid://bcolhterb34qg" path="res://scenes/component/health_component.tscn" id="1_skomr"]
[ext_resource type="Script" path="res://scenes/game_object/wizard_enemy/wizard_enemy.gd" id="1_y2lmb"]
[ext_resource type="PackedScene" uid="uid://djgty1w2gsqcg" path="res://scenes/component/vial_drop_component.tscn" id="2_wu36d"]
[ext_resource type="PackedScene" uid="uid://wm5fggrrqh6n" path="res://scenes/component/death_component.tscn" id="3_c5dqx"]
[ext_resource type="PackedScene" uid="uid://bvmyolocueke6" path="res://scenes/component/velocity_component.tscn" id="3_us0xr"]
[ext_resource type="PackedScene" uid="uid://bkmcx76y5ucg5" path="res://scenes/component/hurtbox_component.tscn" id="4_lofl7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vnank"]
radius = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_7vaev"]
radius = 6.0

[node name="WizardEnemy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 8
collision_mask = 9
script = ExtResource("1_y2lmb")

[node name="HealthComponent" parent="." instance=ExtResource("1_skomr")]
max_health = 30.0

[node name="VialDropComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("2_wu36d")]
health_component = NodePath("../HealthComponent")

[node name="VelocityComponent" parent="." instance=ExtResource("3_us0xr")]
max_speed = 60
acceleration = 2.0

[node name="DeathComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("3_c5dqx")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_lofl7")]
position = Vector2(0, -7)
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
shape = SubResource("CircleShape2D_vnank")

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
texture = ExtResource("1_cab44")
offset = Vector2(0, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_7vaev")
